# uubed-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  COMPARATIVE_BENCHMARK_REPORT.md  COMPLETED_WORK.md  C_API_README.md  Cargo.toml  GEMINI.md  IMPLEMENTATION_SUMMARY.md  MANUAL_SETUP.md  Makefile  PLAN.md  PYO3_OPTIMIZATION_SUMMARY.md  README.md  RELEASE_WORKFLOW.md  TODO.md  benchmark_analysis.py  build-and-test-and-release.sh  encoder_test_coverage_analysis.md  llms.txt  pyproject.toml  python_usage_example.py  run-tests.sh  test.txt  uubed.pc.in  version-manager.sh
.github/workflows/: ci.yml  release.yml
examples/: c_api_demo  c_api_demo.c
examples/c_api_demo.dSYM/Contents/: Info.plist
examples/c_api_demo.dSYM/Contents/Resources/DWARF/: c_api_demo
examples/c_api_demo.dSYM/Contents/Resources/Relocations/x86_64/: c_api_demo.yml
include/: uubed.h
rust/: Cargo.toml  PERFORMANCE_REPORT.md  TESTING_GUIDE.md  test_topk_perf  test_topk_perf.rs
rust/benches/: comparative_bench.rs  large_embedding_bench.rs  memory_bench.rs  topk_bench.rs  zero_copy_bench.rs
rust/examples/: topk_perf.rs  zero_copy_demo.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: q64_decode.rs  q64_roundtrip.rs  simhash_fuzz.rs  topk_fuzz.rs  zorder_fuzz.rs
rust/src/: bindings.rs  capi.rs  error.rs  lib.rs  parallel.rs  simd.rs
rust/src/encoders/: mod.rs  mq64.rs  q64.rs  simhash.rs  simhash_safe.rs  topk.rs  topk_optimized.rs  zorder.rs
rust/tests/: buffer_operations_test.rs  error_handling_test.rs  integration_test.rs  mq64_comprehensive_test.rs  property_tests.rs  simhash_safe_test.rs  thread_safety.rs  version_test.rs
tests/: test_async_support.py  test_basic.py  test_numpy_integration.py  test_release_workflow.py
