[workspace]
members = ["rust"]
resolver = "2"

[workspace.package]
version = "1.0.10"
edition = "2021"
authors = ["Adam Twardoch <adam+github@twardoch.com>"]
license = "MIT"
repository = "https://github.com/twardoch/uubed"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

# Profile for development with some optimizations
[profile.dev-opt]
inherits = "dev"
opt-level = 2         # Some optimization for bearable performance