[package]
name = "uubed-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "High-performance Rust core for position-safe embedding encoding"

[lib]
name = "uubed_native"
crate-type = ["cdylib", "rlib", "staticlib"]  # cdylib for Python, rlib for benchmarks/tests, staticlib for C API

[dependencies]
# Core dependencies
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
rayon = "1.10"        # Parallel processing
once_cell = "1.20"    # Lazy static initialization
libc = "0.2"          # C types for FFI

# For SimHash random projections
rand = "0.8"
rand_chacha = "0.3"   # Cryptographically secure RNG
rand_distr = "0.4"    # Normal distribution

# Performance optimizations
bytemuck = { version = "1.19", optional = true }

[features]
default = []
python = ["dep:pyo3"] # Enable Python bindings
simd = ["bytemuck"]    # Enable SIMD optimizations
capi = []               # Enable C API compilation

# Profile configuration is inherited from workspace

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
quickcheck = "1.0"
quickcheck_macros = "1.0"
arbitrary = { version = "1.0", features = ["derive"] }

# Dependencies for comparative benchmarks
base64 = "0.22"
hex = "0.4"
rmp-serde = "1.3"
bincode = "1.3"
ciborium = "0.2"
serde = { version = "1.0", features = ["derive"] }
fastrand = "2.0"

[[bench]]
name = "topk_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "large_embedding_bench"
harness = false

[[bench]]
name = "comparative_bench"
harness = false